update: redis锁